# Web-Defect-Detection-System

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  Dockerfile  README.md  deploy.sh  deploy_bare.sh  docker-compose.yml  main_server.py  pull_subprojects.bat  requirements.txt  run_debug_server_dev.py  run_debug_server_ssl_dev.py  run_figma_ui_dev.bat  run_server.bat  run_server_dev.bat  run_server_dev.py  server.py
TestData/: README.md  defects_seq12.json  health.json  meta.json  openapi.json  steel_meta_seq12.json  steels.json  test_model_config.json
TestData/DataBase/: DefectDetectionDatabBase.db  ncdplate.db  ncdplatedefect.db
app/server/: __init__.py  config_center.py  database.py  deps.py  main.py  net_table.py  schemas.py  status_service.py  test_model.py  test_model_enhanced.py  test_model_monitoring.py  test_model_recovery.py  test_model_validator.py
app/server/api/: __init__.py  admin.py  annotations.py  cache.py  defects.py  dependencies.py  health.py  images.py  meta.py  net.py  status.py  (+2 more)
app/test/: api_smoke.py
app/ui/DefectWebUi/: CMakeLists.txt  README.md  main.py
app/ui/DefectWebUi/qml/: App.qml  main.qml  qml.qrc
app/ui/DefectWebUi/qml/components/: DefectListPanel.qml  ImagePreview.qml  NavRail.qml  PanelHeader.qml  PlatesPanel.qml  SideRail.qml  TileViewer.qml  TileViewport.qml
app/ui/DefectWebUi/qml/js/: api.js  http.js  orientation.js
app/ui/DefectWebUi/qml/pages/: DefectsPage.qml  ImagesPage.qml  SettingsPage.qml
app/ui/DefectWebUi/qml/store/: AppStore.qml  qmldir
app/ui/DefectWebUi/resources/: qtquickcontrols2.conf  resources.qrc
app/ui/DefectWebUi/src/: main.cpp
certs/bkvision.online/: bkvision.online.crt  bkvision.online.csr  bkvision.online.key
configs/: main.json  server.json  server.sample.json  server_small.json
configs/net_tabel/: README.MD
configs/template/: DefectClass.json  calibarte.xml  map.json  server.json
demo/server_demo/: api_smoke.py
join_project/project/: App.tsx
temp/: DefectImageView_orig.tsx  figma__1.txt
work/: WASM端同步.md  server_work1.md  surface_image_info 逻辑修改  ui_work1.md  后台管理系统数据设计.md  图像加载修复  图像界面缺陷绘制,md  性能模式.md  按钮功能.md  方向功能.md  模拟数据  测试数据测试模式.md  瓦片cache.md  瓦片加载的图像读取逻辑.md  瓦片缓存逻辑.md  简化工程.md  缺陷分布图的图像显示  缺陷图像显示功能修复.md  缺陷字典api适配  长带显示的逻辑
work/local_db/: DefectDetectionDatabBase.db
(+107 files in other folders)
